--- a/.github/workflows/deploy-to-cloudrun.yml
+++ b/.github/workflows/deploy-to-cloudrun.yml
@@ -10,6 +10,10 @@ jobs:
     name: Deploy to Cloud Run
     runs-on: ubuntu-latest
 
+    env:
+      PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+      REGION: ${{ secrets.GCP_REGION }}
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -24,17 +28,18 @@ jobs:
 
       - name: Set up Google Cloud Project and Region
         run: |
-          gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
-          gcloud config set run/region ${{ secrets.GCP_REGION }}
+          gcloud config set project $PROJECT_ID
+          gcloud config set run/region $REGION
 
       - name: Build and Push Docker Image
         run: |
-          gcloud builds submit --tag gcr.io/${{ secrets.GCP_PROJECT_ID }}/saas-app
+          gcloud builds submit --tag gcr.io/$PROJECT_ID/saas-app
 
       - name: Deploy to Cloud Run
         run: |
           gcloud run deploy saas-app \
-            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/saas-app \
+            --image gcr.io/$PROJECT_ID/saas-app \
             --platform managed \
-            --region ${{ secrets.GCP_REGION }} \
+            --region $REGION \
             --allow-unauthenticated
+
